# crewai-sellers-flow

./: README.md  main.py  pyproject.toml  resultado.json  seller.json  test_zapi.py  whatsapp.py  whatsapp_new_target.py
src/crewai_sellers_flow/: config.py  main.py
src/crewai_sellers_flow/adapters/: api_z_message.py  braze_crm_plataform.py  csv_seller_stockout_repository.py  json_seller_repository.py  lka_repository.py  whatsapp_lka_sharepoint.py
src/crewai_sellers_flow/domain/: message_template.py  seller_report.py  seller_stockout.py  sellers_new_target.py
src/crewai_sellers_flow/ports/: crm_platform.py  seller_repository.py  seller_stockout_repository.py  whatsapp_lka_repository.py
src/crewai_sellers_flow/tools/: custom_tool.py
