[project]
name = "crewai_sellers_flow"
version = "0.1.0"
description = "crewai-sellers-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "office365-rest-python-client>=2.6.2",
]

[project.scripts]
kickoff = "crewai_sellers_flow.main:kickoff"
run_crew = "crewai_sellers_flow.main:kickoff"
plot = "crewai_sellers_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
